[metadata]
name = Ssh-Ninja
version = 1.0
description = Python script for Bruteforce a Secure Shell Protocol.
long_description = file: README.md, LICENSE.md
keywords = one, two
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8.5

[flake8]
max-line-length = 69